<resources>
<string name="lang_code">en</string>
<string name="layout_app_name">TV Movie Tracker</string>
<string name="layout_main_no_items">No shows found.</string>
<string name="layout_search_no_items">No shows found.</string>
<string name="layout_seasons_no_items">No seasons to display.</string>
<string name="archive">Finished</string>
<string name="addserie_hint">Show to add…</string>
<string name="search_hint">Search…</string>
<string name="menu_filter">Filter shows</string>
<string name="menu_undo">Undo</string>
<string name="menu_add_serie">Add a show</string>
<string name="menu_update">Sync shows</string>
<string name="menu_refresh_posters">Refresh posters</string>
<string name="posters_refreshed">Posters refreshed</string>
<string name="poster_refresh_running">Poster refresh already running</string>
<string name="menu_search">Search</string>
<string name="menu_sort_by_name">Sort by name</string>
<string name="menu_sort_by_unseen">Sort by unseen</string>
<string name="menu_about">Settings</string>
<string name="menu_exit">Exit</string>
<string name="menu_context_update">Update</string>
<string name="menu_context_updated">updated</string>
<string name="menu_context_delete">Delete</string>
<string name="menu_context_add_serie">Add show</string>
<string name="menu_show_archive">Show finished</string>
<string name="menu_show_current">Show current</string>
<string name="menu_exclude_seen">Exclude seen</string>
<string name="menu_include_seen">Include seen</string>
<string name="menu_log">History</string>
	<string name="swipe_action_watched">Mark watched</string>
	<string name="swipe_action_finished">Move to Finished</string>
<string name="menu_close_log">Close log</string>
<string name="menu_context_view_serie_details">Show details</string>
<string name="menu_context_view_imdb">IMDb show page</string>
<string name="menu_context_view_ep_imdb">IMDb episode cast</string>
<string name="menu_context_search_on">Search on</string>
<string name="menu_context_ext_resources">External resources</string>
<string name="menu_context_mark_next_episode_as_seen">Mark next episode as seen</string>
<string name="menu_context_pin">Pin</string>
<string name="menu_context_unpin">Unpin</string>
<string name="dialog_ok">OK</string>
<string name="dialog_auto_backup">Automatically perform daily backups</string>
<string name="dialog_backup_versioning">Use versioning for backups</string>
<string name="dialog_backup">Backup</string>
<string name="dialog_clear_poster_cache">Clear Discover poster cache</string>
<string name="dialog_poster_cache_size">Discover poster cache size</string>
<string name="poster_cache_cleared">Discover poster cache cleared</string>
<string name="dialog_backup_done">Database backup completed</string>
<string name="dialog_backup_failed">Unable to perform backup!</string>
<string name="dialog_backup_usefolder">Use folder for daily backups</string>
<string name="dialog_change_language">Synopsis language</string>
<string name="settings_theme">Theme</string>
<string name="theme_automatic">Automatic</string>
<string name="theme_light">Light</string>
<string name="theme_dark">Dark</string>
<string name="theme_amoled">AMOLED black</string>
<string name="crash_title">The app crashed</string>
<string name="share">Share</string>
<string name="discover">Discover</string>
<string name="discover_empty">Nothing found. Check your connection and try again.</string>
<string name="discover_add">Add to library</string>
<string name="discover_poster_desc">Poster</string>
<string name="discover_no_key">Add your TMDB API key in Settings to discover movies.</string>
<string name="discover_already">Already in your library</string>
<string name="discover_loading">Finding great shows and movies for you… hang on, good things take a moment!</string>
<string name="discover_no_synopsis">No synopsis available.</string>
<string name="discover_details_poster">Poster</string>
<string name="dialog_use_mirror">Use TheTVDB mirror (try this if updates are too slow)</string>
<string name="dialog_restore">Restore</string>
<string name="dialog_restore_now">Restoring a backup will remove all information currently in TV Movie Tracker. Continue?</string>
<string name="dialog_restore_done">Database restored successfully</string>
<string name="dialog_restore_failed">Unable to restore database!</string>
<string name="dialog_title_delete">Delete show?</string>
<string name="dialog_delete">Are you sure you want to delete %s?</string>
<string name="dialog_cancel">Cancel</string>
<string name="dialog_search">Search string:</string>
<string name="dialog_update_series">Are you sure you want to update all listed shows now?</string>
<string name="dialog_update_speedup">\n\nYou can speed up this process with the option Update shows\' latest season only.</string>
<string name="dialog_latest_season">Update shows\' latest season only</string>
<string name="dialog_include_specials">Include specials in unwatched count</string>
<string name="dialog_full_line_check">Use entire line to mark episode</string>
<string name="dialog_large_posters">Large posters</string>
<string name="dialog_switch_swipe_direction">Swipe right-to-left to go back</string>
<string name="dialog_show_next_airing">Show date of next airing episode, instead of next episode\'s date</string>
<string name="dialog_mark_from_last_watched">Mark next episode starting from the most recently watched</string>
<string name="dialog_help">&#187; Don\'t forget to update shows regularly
\n&#187; Long-press items for more options
\n&#187; Swipe left-to-right to go back
\n\nIn Shows Overview:
\n&#187; Pull down list to update shows
\n&#187; Tap poster for next episode info
\n&#187; Double tap poster for show info
\n&#187; Long-press poster for external resource (to *[url]s directly, or list)
\n&#187; Swipe right-to-left to mark next as seen
\n\nIn Show Details:
\n&#187; Tap poster for full-screen view
\n&#187; Click full-screen poster image for fan art
\n&#187; Long-press full-screen poster to open in external app
\n\nIn Show/Episode Details:
\n&#187; Tap IMDb rating to view in IMDb
\n&#187; Tap date to add to calendar</string>
<string name="dialog_networks">Networks</string>
<string name="menu_archive">Move to Finished</string>
<string name="menu_unarchive">Move back to Watching</string>
<string name="messages_title_updating_series">Updating shows</string>
<string name="messages_title_updating_db">Updating database</string>
<string name="messages_update_serie">Gathering show information…</string>
<string name="messages_no_internet">No Internet connection available</string>
<string name="messages_title_update_series">Update shows</string>
<string name="messages_update_series">Gathering shows information. This operation will take a while…</string>
<string name="messages_episodes">episodes</string>
<string name="messages_new_episodes">new episodes</string>
<string name="messages_new_episode">new episode</string>
<string name="messages_ep_aired">aired</string>
<string name="messages_to_be_aired">to be aired</string>
<string name="messages_to_be_aired_pl">to be aired</string>
<string name="messages_seasons">Seasons</string>
<string name="messages_season">Season</string>
<string name="messages_next_episode">Next episode:</string>
<string name="messages_next_airing">Next airing:</string>
<string name="messages_no_new_eps">No new episodes</string>
<string name="messages_season_completely_watched">Season completely watched</string>
<string name="messages_deleted">deleted</string>
<string name="messages_title_search_series">Searching shows</string>
<string name="messages_search_series">Retrieving data…</string>
<string name="messages_series_success">Show %s added</string>
<string name="messages_title_adding_serie">Adding show</string>
<string name="messages_adding_serie">Gathering show information…</string>
<string name="messages_context_mark_seasonseen">Mark all episodes as seen</string>
<string name="messages_specials">Specials</string>
<string name="messsages_view_ep_details">Episode details</string>
<string name="messsages_edit_seen_timestamp">Edit seen timestamp</string>
<string name="messages_calendar_app_error">No Calendar app found!</string>
<string name="messages_thetvdb_con_error">Connection error. Please try again.</string>
<string name="messages_marked_seen">marked as seen</string>
<string name="messages_marked_unseen">marked as unseen</string>
<string name="messages_context_mark_seasonunseen">Mark all episodes as unseen</string>
<string name="messages_context_mark_asseenuptothis">Seasons up to here are seen</string>
<string name="messages_context_archived">finished</string>
<string name="messages_context_unarchived">moved back to Watching</string>
<string name="messages_aired">Aired:</string>
<string name="messages_at">at</string>
<string name="messages_of">of</string>
<string name="messages_on">on</string>
<string name="messages_daily">Daily</string>
<string name="messages_ep">Ep.</string>
<string name="episode_directors">Directors:</string>
<string name="episode_writers">Writers:</string>
<string name="episode_guest_stars">Guest stars:</string>
<string name="series_runtime_minutes">minutes</string>
<string name="series_synopsis">Synopsis:</string>
<string name="series_actors">Actors:</string>
<string name="showstatus_continuing">continuing</string>
<string name="showstatus_ended">ended</string>
<string name="media_tv_shows">TV Shows</string>
<string name="media_movies">Movies</string>
<string name="mode_watching">Watching</string>
<string name="mode_finished">Finished</string>
<string name="menu_add_movie">Add movie</string>
	<string name="menu_update_movies">Sync movies</string>
	<string name="menu_filter_movies">Filter movies</string>
	<string name="menu_backup_now">Back up now</string>
	<string name="drawer_open">Open library</string>
	<string name="drawer_close">Close library</string>
	<string name="layout_main_no_movies">No movies found.</string>
	<string name="layout_search_no_movies">No movies found.</string>
	<string name="menu_context_movie_details">Movie details</string>
	<string name="menu_context_update_movie">Update movie</string>
	<string name="menu_context_delete_movie">Delete movie</string>
	<string name="dialog_title_delete_movie">Delete movie?</string>
	<string name="menu_context_mark_movie_seen">Mark as watched</string>
	<string name="menu_context_mark_movie_unseen">Mark as unwatched</string>
	<string name="dialog_update_movies">Are you sure you want to update all listed movies now?</string>
	<string name="messages_title_updating_movies">Updating movies</string>
	<string name="messages_update_movies">Gathering movie information. This operation will take a while…</string>
	<string name="messages_update_movie">Gathering movie information…</string>
	<string name="messages_error_dbupdate_movie">Database error while updating movie</string>
	<string name="messages_error_dbdelete_movie">Database error while deleting movie</string>
	<string name="movie_watched">Watched</string>
	<string name="movie_not_watched">Not watched</string>
	<string name="movie_minutes_short">min</string>
	<string name="dialog_restore_invalid">The selected file is not a valid database.</string>
	<string name="saf_not_supported">The file picker is not supported on this Android version.</string>
<string name="tmdb_api_key_title">TMDB API key</string>
<string name="tmdb_api_key_hint">Paste your free TMDB API key (themoviedb.org/settings/api)</string>
<string name="tmdb_key_required">TMDB API key required</string>
<string name="tmdb_key_missing">Set your TMDB API key in Settings to search movies</string>
<string name="messages_tmdb_con_error">TMDB connection error. Please try again.</string>
<string name="messages_title_search_movies">Search movies</string>
<string name="messages_search_movies">Searching TMDB…</string>
<string name="messages_movie_success">Movie %s added</string>
<string name="messages_title_adding_movie">Adding movie</string>
</resources>