<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/drawer_layout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/main" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:id="@+id/search" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:visibility="gone">
			<EditText android:id="@+id/search_text" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:padding="6dp" android:background="@android:color/transparent" android:textColor="@android:color/primary_text_dark" android:hint="@string/search_hint" android:inputType="textFilter" android:imeOptions="actionDone"/>
			<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="3dp" android:src="@android:drawable/ic_menu_add" android:onClick="searchForShow"/>
			<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="3dp" android:src="@android:drawable/ic_menu_close_clear_cancel" android:onClick="clearFilter"/>
		</LinearLayout>
		<com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent" android:layout_height="wrap_content">
			<com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:title="@string/layout_app_name"/>
			<com.google.android.material.tabs.TabLayout android:id="@+id/mode_tabs" android:layout_width="match_parent" android:layout_height="wrap_content" app:tabMode="fixed" app:tabGravity="fill">
				<com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mode_watching"/>
				<com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mode_finished"/>
				<com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_log"/>
			</com.google.android.material.tabs.TabLayout>
		</com.google.android.material.appbar.AppBarLayout>
		<FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
			<nl.asymmetrics.droidshows.ui.BounceListView android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/android:list"/>
			<LinearLayout android:id="@+id/android:empty" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal">
				<TextView android:id="@+id/empty_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="9dp" android:text="@string/layout_main_no_items"/>
				<Button android:id="@+id/add_show" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_context_add_serie" android:onClick="searchForShow"/>
			</LinearLayout>
			<com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/fab_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|end" android:layout_margin="16dp" android:src="@drawable/ic_menu_add" android:onClick="showPlusMenu" android:contentDescription="@string/menu_add_serie"/>
		</FrameLayout>
	</LinearLayout>
	<com.google.android.material.navigation.NavigationView android:id="@+id/nav_view" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_gravity="start" app:menu="@menu/drawer_menu" app:headerLayout="@layout/drawer_header"/>
</androidx.drawerlayout.widget.DrawerLayout>
